Fix important requirement to overlap mui styles

--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,8 +1,5 @@
-.page {
-}
-
 @media screen and (max-width: 900px) {
   .page {
-    padding: 20px;
+    padding: 20px !important;
   }
 }
